<resources>
    <string name="app_name">Routine Task</string>
    <string name="app_slogan">Achieve your daily goals</string>
    <string name="title_activity_main">@string/app_name</string>
    <string name="title_activity_newtask">Create Task</string>
    <string name="title_activity_edittask">Edit Task</string>
    <string name="title_activity_preferences">@string/drawer_item_preferences</string>
    <string name="title_activity_settings">Battery Optimization</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_share_text">
        _Hi, &#128515; i am using a great App called *Routine Task*. I was being unable to follow my daily routine tasks &#128532; and always got distracted &#128565; and forgot the task i am supposed to do &#128553;. I am using *Routine Task* App for a couple of time &#128524; and now i never forget a single task of my routine &#128521; ._
        \n\nIt is a great app to build daily habits. I suggest you to give it a shot &#128519;&#128076; \nand it\'s less than *10 MB* &#128563; .\n\n&#128073; *Download Now* : https://play.google.com/store/apps/details?id=com.cod3rboy.timetable
    </string>
    <string name="cab_title">Select Tasks</string>
    <string name="cab_single_select">%d Task Selected</string>
    <string name="cab_multiple_select">%d Tasks Selected</string>
    <string name="pref_tutorial_fab_drawer">tutorial_fab_drawer</string>
    <string name="pref_tutorial_add_task">tutorial_add_task</string>
    <string name="pref_tutorial_delete_task">tutorial_del_task</string>
    <string name="pref_tutorial_edit_task">tutorial_edit_task</string>
    <string name="pref_tutorial_form_task">tutorial_form_task</string>
    <string name="pref_tutorial_reminder_task">tutorial_reminder_task</string>
    <string name="pref_tutorial_pomodoro">tutorial_pomodoro</string>
    <string name="pref_tutorial_today_item">tutorial_today_item</string>
    <string name="pref_tutorial_routine_item">tutorial_routine_item</string>
    <string name="pref_tutorial_onetime_item">tutorial_onetime_item</string>
    <string name="pref_battery_optimisation">tutorial_battery_optimisation</string>
    <string name="pref_whats_today_layout_type">whats_today_layout_type</string>
    <string name="pref_routine_tasks_layout_type">routine_tasks_layout_type</string>
    <string name="pref_one_time_tasks_layout_type">one_time_tasks_layout_type</string>
    <string name="tutorial_drawer_title">App Menu</string>
    <string name="tutorial_drawer_desc">Tap on this icon to display app menu</string>
    <string name="tutorial_save_title">Save Changes</string>
    <string name="tutorial_save_desc">Tap it to save all changes made to the task</string>
    <string name="tutorial_delete_title">Delete Task</string>
    <string name="tutorial_delete_desc">Tap it to delete this task</string>
    <string name="tutorial_new_title">Create new task</string>
    <string name="tutorial_new_desc">Tap it to create a new routine task or one-time task</string>
    <string name="tutorial_create_title">Save</string>
    <string name="tutorial_create_desc">Tap it to save new task</string>
    <string name="tutorial_pomodoro_title">Start Pomodoro</string>
    <string name="tutorial_pomodoro_desc">Set the timer and tap on play button</string>
    <string name="tutorial_color_title">Background Color</string>
    <string name="tutorial_color_desc">Tap to choose a background color for the task</string>
    <string name="tutorial_reminder_title">Task Reminder</string>
    <string name="tutorial_reminder_desc">Tap to set a reminder for the task</string>
    <string name="tutorial_start_time_title">Start Time</string>
    <string name="tutorial_start_time_desc">Tap to set start time for the task</string>
    <string name="tutorial_duration_title">Duration</string>
    <string name="tutorial_duration_desc">Tap to set duration for the task</string>
    <string name="tutorial_remove_reminder_title">Remove Reminder</string>
    <string name="tutorial_remove_reminder_desc">Tap this to remove reminder for the task</string>
    <string name="tutorial_weekday_title">Repeat for Days</string>
    <string name="tutorial_weekday_desc">Tap No Repeat to create one-time tasks or choose any weekdays to create routine tasks</string>
    <string name="tutorial_today_item_title">Today\'s Routine</string>
    <string name="tutorial_today_item_desc">List of routine tasks to complete today. Tap any task to edit or long tap to start selection</string>
    <string name="tutorial_routine_item_title">Routine Tasks</string>
    <string name="tutorial_routine_item_desc">List of all created routine tasks. Tap any task to edit or long tap to start selection</string>
    <string name="tutorial_onetime_item_title">One-Time Tasks</string>
    <string name="tutorial_onetime_item_desc">List of all created one-time tasks. Tap any task to edit or long tap to start selection</string>
    <string name="title_option_newtask">New Task</string>
    <string name="tooltip_option_newtask">Create a new routine task</string>
    <string name="title_option_create_newtask">Save</string>
    <string name="tooltip_option_create_newtask">Save new routine task</string>
    <string name="title_option_edittask">Edit Selected Task</string>
    <string name="tooltip_option_edittask">Change or update selected routine task</string>
    <string name="title_option_deletetask">Delete</string>
    <string name="tooltip_option_deletetask">Delete routine task</string>
    <string name="title_option_select_all">Select All</string>
    <string name="tooltip_option_select_all">Select All Tasks</string>
    <string name="title_option_savetask">Save Changes</string>
    <string name="tooltip_option_savetask">Save changes made to this routine task</string>
    <string name="title_option_random_stats_task">Random Tasks Stats</string>
    <string name="tooltip_option_random_stats_task">Generate random statistics data for tasks</string>
    <string name="title_option_reset_stats_tasks">Reset Data</string>
    <string name="tooltip_option_stats_reset_task">Reset tasks statistics data</string>
    <string name="title_option_random_stats_pomodoro">Random Pomodoro Stats</string>
    <string name="tooltip_option_random_stats_pomodoro">Generate random statistics data for pomodoro</string>
    <string name="title_option_reset_stats_pomodoro">Reset Data</string>
    <string name="tooltip_option_stats_reset_pomodoro">Reset pomodoro statistics data</string>
    <string name="title_option_duplicate">Make duplicate</string>
    <string name="title_option_layout_list">View List</string>
    <string name="title_option_layout_grid">View Grid</string>
    <string name="title_option_filter">Filter List</string>
    <string name="title_option_filter_all_days">All Days</string>
    <string name="title_option_filter_sun">Sunday</string>
    <string name="title_option_filter_mon">Monday</string>
    <string name="title_option_filter_tue">Tuesday</string>
    <string name="title_option_filter_wed">Wednesday</string>
    <string name="title_option_filter_thu">Thursday</string>
    <string name="title_option_filter_fri">Friday</string>
    <string name="title_option_filter_sat">Saturday</string>
    <string name="drawer_header_icon_desc">Routine task app icon</string>
    <string name="drawer_item_today">What\'s Today</string>
    <string name="drawer_item_routine_tasks">Routine Tasks</string>
    <string name="drawer_item_onetime_tasks">One-Time Tasks</string>
    <string name="drawer_item_pomodoro">Pomodoro</string>
    <string name="drawer_item_progress">My Progress</string>
    <string name="drawer_item_about">About</string>
    <string name="drawer_item_preferences">Preferences</string>
    <string name="drawer_group_title_help_us">Help us improve</string>
    <string name="drawer_item_share">Share</string>
    <string name="drawer_item_rate">Rate and Review</string>
    <string name="drawer_item_feedback">Feedback</string>
    <string name="drawer_item_donate">Donate</string>
    <string name="settings_category_notifications">Task Notifications</string>
    <string name="settings_category_weekday_time">Weekday and Time</string>
    <string name="settings_time_format_title">Time Format</string>
    <string name="settings_time_format_key">key_setting_time_format</string>
    <string name="settings_time_format_dialog_title">Choose time format</string>
    <string name="settings_time_format_entry_12">12-hour</string>
    <string name="settings_time_format_entry_24">24-hour</string>
    <string name="settings_time_format_value_12">12</string>
    <string name="settings_time_format_value_24">24</string>
    <string name="settings_first_weekday_title">First day of week</string>
    <string name="settings_first_weekday_key">key_setting_first_weekday</string>
    <string name="settings_first_weekday_dialog_title">Choose first day of week</string>
    <string name="settings_first_weekday_value_monday">2</string>
    <string name="settings_sort_task_title">Sort completed tasks</string>
    <string name="settings_sort_task_key">key_setting_sort_task</string>
    <string name="settings_sort_task_summary">Always display completed tasks at the bottom of task list</string>
    <string name="settings_sort_task_default_value">true</string>
    <string name="settings_sound_task_complete_title">Task complete sound</string>
    <string name="settings_sound_task_complete_key">key_setting_sound_task_complete</string>
    <string name="settings_sound_task_complete_summary">Play a sound on task complete</string>
    <string name="settings_sound_task_complete_default_value">true</string>
    <string name="settings_notification_alarm_title">Task notifications alarm</string>
    <string name="settings_notification_alarm_key">key_setting_notification_alarm</string>
    <string name="settings_notification_alarm_summary">Play alarm sound on task notifications</string>
    <string name="settings_notification_alarm_default_value">false</string>
    <string name="settings_duration_alarm_title">Task duration alarm</string>
    <string name="settings_duration_alarm_key">key_setting_timer_alarm</string>
    <string name="settings_duration_alarm_summary">Play alarm sound when task duration is completed</string>
    <string name="settings_duration_alarm_default_value">true</string>
    <string name="form_label_repeat">Repeat</string>
    <string name="form_label_start_time">Start Time</string>
    <string name="form_label_duration">Duration</string>
    <string name="choice_no_repeat">No Repeat</string>
    <string name="choice_everyday">Everyday</string>
    <string name="day_choice_sunday">Sunday</string>
    <string name="day_choice_monday">Monday</string>
    <string name="day_choice_tuesday">Tuesday</string>
    <string name="day_choice_wednesday">Wednesday</string>
    <string name="day_choice_thursday">Thursday</string>
    <string name="day_choice_friday">Friday</string>
    <string name="day_choice_saturday">Saturday</string>
    <string name="form_hint_title">Title</string>
    <string name="form_hint_desc">Description</string>
    <string name="btn_label_set_reminder">Set Reminder</string>
    <string name="btn_clear_description">Clear Reminder</string>
    <string name="text_getting_started">Few things before getting started -\n1. Go to App info settings and set Battery optimisation for this app to Not Optimised.
        \n2. You should also whitelist this app in any other background restrictions options present in your mobile.
        \n\nThis will help our app to deliver timely task notifications without any delay.</string>
    <string name="text_subtitle">Battery optimisation and Background restrictions</string>
    <string name="text_image_desc">Set App Info Setting Battery Optimization to Not Optimised</string>
    <string name="text_btn_confirm">CONFIRM</string>
</resources>