<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="20dp"
        android:scaleType="centerInside"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/lottie_settings"
        app:lottie_scale="0.15" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAppearance="?textAppearanceHeadline4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_subtitle"
        android:textAppearance="?textAppearanceBody1" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:contentDescription="@string/text_image_desc"
        android:scaleType="centerInside"
        android:src="@drawable/battery_optimize" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:layout_weight="1"
        android:text="@string/text_getting_started"
        android:textAppearance="?textAppearanceBody2" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:onClick="startMainActivity"
        android:text="@string/text_btn_confirm" />
</LinearLayout>