<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:orientation="vertical">
    <!--Header Layout in Navigation Drawer-->
    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginStart="18dp"
        android:contentDescription="@string/drawer_header_icon_desc"
        android:scaleType="fitCenter"
        android:src="@mipmap/ic_launcher_round"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintStart_toEndOf="@id/app_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/app_slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_slogan"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/app_name"
        app:layout_constraintTop_toBottomOf="@id/app_name" />
</androidx.constraintlayout.widget.ConstraintLayout>